--- a/style.scss
+++ b/style.scss
@@ -9,12 +9,12 @@
     justify-content: space-around;
     }
 .group_1{
-    max-width: 111px;
+    width: 111px;
     display: flex;
     justify-content: space-between;
 }
 .group_2{
-    max-width: 168px;
+    width: 168px;
     display: flex;
     justify-content: space-between;
 }
