--- a/style.scss
+++ b/style.scss
@@ -1,20 +1,399 @@
 *{
     margin: 0;
     padding: 0;
-    width: 100%;
+}
+.container{
+    width: 1600px;
+    margin: 0 auto;
 }
 .menu{
+    width: 100%;
+    margin-top: 10px;
+    min-height: 75px;
     background-color: black;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     }
-.group_1{
-    width: 111px;
+.menu_logo{
+    width: 100%;
+    max-width: 111px;
+    padding-left: 231px;
+    align-items: center;
     display: flex;
     justify-content: space-between;
 }
-.group_2{
-    width: 168px;
+.menu_main{
+    width: 100%;
+    max-width: 168px;
+    align-items: center;
+    padding-right: 231px;
     display: flex;
     justify-content: space-between;
+}//чёрное с ссылками
+.main_top{
+    background: #F1E4E6;
+    display: flex;
+    justify-content: flex-start;
 }
+.brand{
+    padding-top: 290px;
+    padding-left: 63px;
+}//картинка с девизом
+.top_content{
+    width: 100%;
+    margin: 65px auto 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    max-width: 1140px;
+}
+.women{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  width: 360px;
+  min-height: 260px;
+  margin: 0 30px 0 0;
+  background-size: cover;
+  background-position: center;
+  background-image: url(image/women.jpg);
+}
+.title{
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19,2px;
+  text-align: center;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  display: block;
+  width: 100%;
+}
+.subtitle{
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28,8px;
+  text-align: center;
+  color: #F16D7F;
+  text-transform: uppercase;
+  display: block;
+  width: 100%;
+}
+.men{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  width: 360px;
+  min-height: 260px;
+  background-size: cover;
+  background-position: center;
+  background-image: url(image/men.jpg);
+}
+.kids{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  width: 360px;
+  min-height: 260px;
+  margin: 0 0 0 30px;
+  background-size: cover;
+  background-position: center;
+  background-image: url(image/kids.jpg);
+    
+}
+.accesories{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  min-height: 260px;
+  margin: 30px 0 0 0;
+  background-size: cover;
+  background-position: center;
+  background-image: url(image/accesories.jpg);
+}//блок с категориями
+.main_content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 1140px;
+  margin: 96px auto;
+}
+.products_title{
+  display: block;
+  width: 100%;
+  margin: 6px 0 0 0;
+  text-align: center;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 36px;
+  color: #222222;
+}
+.products_subtitle{
+  display: block;
+  width: 100%;
+  margin: 0 0 48px 0;
+  text-align: center;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16,8px;
+  color: #9F9F9F;
+}
+.products_item{   
+    display: block;
+    width: 360px;
+    margin: 0 30px 30px 0;
+    position: relative;
+    background: #F8F8F8;
+    text-decoration: none;
+    box-sizing: border-box;
+}
+.products_item:nth-child(3n-1) {
+  margin: 0 0 30px 0;
+}
+.products_item_txt {
+  padding: 25px 18px 20px 18px;
+  box-sizing: border-box;
+  text-align: left;
+}
+.products_item_title {
+  display: block;
+  margin: 0 0 12px 0;
+  text-transform: uppercase;
+  font-size: 13px;
+  line-height: 16px;
+  color: #000000;
+}
+.products_item_subtitle {
+  margin: 0 0 18px 0;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: #5D5D5D;
+}
+.products_item_price {
+  display: block;
+  margin: 0;
+  font-size: 16px;
+  line-height: 19px;
+  color: #F16D7F;
+}
+.products_btn {
+  display: block;
+  width: 211px;
+  padding: 14.5px;
+  background-color: #fff;
+  border: 2px solid #F26376;
+  box-sizing: border-box;
+  color: #F26376;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19,2px;
+  text-align: center;
+  word-break: break-all;
+}
+.products_btn:hover {
+  background-color: #fff;
+  border: 2px solid #000;
+  color: #000;
+}
+.products_btn:active {
+  background-color: #fff;
+  border: 2px solid #F26376;
+  color: #F26376;
+}//блок с карточками
+.features {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 1600px;
+  min-height: 341px;
+  padding: 20px;
+  margin: 95.5px auto 0 auto;
+  background-color: #222224;
+  box-sizing: border-box;
+}
+.features_item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 300px;
+  margin: 0 90px 0 0;
+}
+.features_item_title {
+  display: block;
+  width: 100%;
+  margin: 28px 0 16px 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 19.96px;
+  line-height: 23,95px;
+  color: #FBFBFB;
+  text-align: center;
+}
+.features_item_subtitle {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 13.972px;
+  line-height: 16,77px;
+  text-align: center;
+  color: #FBFBFB;
+}//чёрный контент снизу
+.subscribe {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  max-width: 1600px;
+  min-height: 448px;
+  padding: 20px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  background-image: linear-gradient(rgba(244,244,244, 0.7), rgba(244,244,244, 0.7)), 
+                    url(image/fon.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #F3EEEF;
+}
+.subscribe_info {
+  display: flex;
+  margin: 0 340px 0 0;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  width: 360px;
+}
+.subscribe_info_face {
+  display: block;
+  width: 96px;
+  height: 96px;
+  margin: 0 0 30px 0;
+  background-image: url('https://i.postimg.cc/Y28TgSb7/d22362bea3cdf98de9818d4394ba8ed3-1.png');
+  background-size: 150%;
+  background-position: center -10px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+}
+.subscribe_info_title {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: #222224;
+}
+.subscribe_form {
+  width: 355px;
+}
+.subscribe_form_title, 
+.subscribe_form_subtitle {
+  color: #222224;
+  text-align: center;
+  text-transform: uppercase;
+  font-style: normal;
+}
+.subscribe_form_title {
+  display: block;
+  margin: 0 0 10px 0;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 40,13px;
+}
+.subscribe_form_subtitle {
+  display: block;
+  margin: 0 0 32px 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30,1px;
+}
+.subscribe_form_all {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 356px;
+}
+.subscribe_form_email {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 20px 0 0 20px ;
+  background-color: #E1E1E1;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16,8px;
+  color: #222224;
+  opacity: 0.67;
+}
+.subscribe_form_btn {
+  display: block;
+  padding: 20px;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 0 20px 20px 0;
+  background-color: #F16D7F;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16,8px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #FFFFFF;
+}//блок - лицо с подпиской
+.end {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1600px;
+  min-height: 79px;
+  padding: 20px 235px;
+  box-sizing: border-box;
+  background-color: #222224;
+}
+.end_text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19.2px;
+  color: #FBFBFB;
+}
+.end_socials {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 148px;
+}
+.end_socials_item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  background-color: #fff;
+}//конец с соц. сетями
