--- a/style.scss
+++ b/style.scss
@@ -1,35 +1,29 @@
 *{
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 .container{
-    width: 1600px;
-    margin: 0 auto;
+  width: 1600px;
+  margin: 0 auto;
 }
 .menu{
     width: 100%;
-    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
     min-height: 75px;
     background-color: black;
-    display: flex;
-    justify-content: space-between;
+    .menu_logo{
+      max-width: 111px;
+      padding-left: 231px;
+      align-items: center;
     }
-.menu_logo{
-    width: 100%;
-    max-width: 111px;
-    padding-left: 231px;
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-}
-.menu_main{
-    width: 100%;
-    max-width: 168px;
-    align-items: center;
-    padding-right: 231px;
-    display: flex;
-    justify-content: space-between;
-}//чёрное с ссылками
+    .menu_main{
+      max-width: 168px;
+      align-items: center;
+      padding-right: 231px;
+  }
+    }
+//чёрное с ссылками
 .main_top{
     background: #F1E4E6;
     display: flex;
@@ -39,75 +33,31 @@
     padding-top: 290px;
     padding-left: 63px;
 }//картинка с девизом
-.top_content{
-    width: 100%;
-    margin: 65px auto 0 auto;
+.categories{
     display: flex;
     flex-wrap: wrap;
-    display: flex;
-    justify-content: center;
+    width: 100%;
     max-width: 1140px;
-}
-.women{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  flex-wrap: wrap;
-  width: 360px;
-  min-height: 260px;
-  margin: 0 30px 0 0;
-  background-size: cover;
-  background-position: center;
-  background-image: url(image/women.jpg);
-}
-.title{
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19,2px;
-  text-align: center;
-  color: #FFFFFF;
-  text-transform: uppercase;
-  display: block;
-  width: 100%;
-}
-.subtitle{
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28,8px;
-  text-align: center;
-  color: #F16D7F;
-  text-transform: uppercase;
-  display: block;
-  width: 100%;
-}
-.men{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  flex-wrap: wrap;
-  width: 360px;
-  min-height: 260px;
-  background-size: cover;
-  background-position: center;
-  background-image: url(image/men.jpg);
-}
-.kids{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  flex-wrap: wrap;
-  width: 360px;
-  min-height: 260px;
-  margin: 0 0 0 30px;
-  background-size: cover;
-  background-position: center;
-  background-image: url(image/kids.jpg);
-    
+    margin: 65px auto 0 auto;
+    justify-content: space-between;
+    .categories_item{
+      margin: 0 0 0 0;
+      align-items: center;
+      align-content: center;
+      width: 360px;
+      min-height: 260px;
+      background-size: cover;
+      background-position: center;
+    .women{
+      background-image: url(image/women.jpg);
+    }
+    .men{
+     background-image: url(image/men.jpg);
+    }
+    .kids{
+     background-image: url(image/kids.jpg);
+    } 
+  }  
 }
 .accesories{
   display: flex;
@@ -121,15 +71,32 @@
   background-size: cover;
   background-position: center;
   background-image: url(image/accesories.jpg);
-}//блок с категориями
-.main_content{
+}
+.txt{
+  font-style: normal;
+  text-align: center;
+  text-transform: uppercase;
+  display: block;
+  width: 100%;
+}
+.title{
+  font-weight: 400;
+  font-size: 16px;
+  color: #FFFFFF;
+}
+.subtitle{
+  font-weight: 700;
+  font-size: 24px;
+  color: #F16D7F;
+}
+.products{
   display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
   flex-wrap: wrap;
   width: 100%;
   max-width: 1140px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
   margin: 96px auto;
 }
 .products_title{
@@ -192,6 +159,48 @@
   font-size: 16px;
   line-height: 19px;
   color: #F16D7F;
+}
+.products_item:hover .products_item_btn {
+  display: flex;
+}
+.products_item:hover .products_item_btn:hover {
+  background-color: #ccc;
+  color: #000;
+  border: 1px solid #000;
+}
+.products_item:hover .products_item_btn:hover svg {
+  fill: #000;
+}
+.products_item:hover .products_item_btn:active {
+  background-color: transparent;
+  color: #fff;
+  border: 1px solid #fff;
+}
+.products_item:hover .products_item_btn:active svg {
+  fill: #fff;
+}
+.products_item_btn svg {
+  fill: #fff;
+  margin: 0 11px 0 0;
+}
+.products_item:hover .products_item_photo {
+  filter: brightness(50%);
+} 
+.products_item_btn {
+  display: none;
+  justify-content: space-around;
+  align-items: center;
+  width: 38.3%;
+  min-height: 43px;
+  border: 1px solid #FFFFFF;
+  background: transparent;
+  text-align: center;
+  font-size: 14px;
+  line-height: 17px;
+  color: #FFFFFF;
+  position: absolute;
+  top: 188px;
+  left: 32.7%;
 }
 .products_btn {
   display: block;
@@ -290,14 +299,14 @@
   width: 96px;
   height: 96px;
   margin: 0 0 30px 0;
-  background-image: url('https://i.postimg.cc/Y28TgSb7/d22362bea3cdf98de9818d4394ba8ed3-1.png');
-  background-size: 150%;
-  background-position: center -10px;
+  background-image: url(image/face.png);
+  background-size: 100%;
+  background-position: center ;
   border-radius: 50%;
   background-repeat: no-repeat;
 }
 .subscribe_info_title {
-  font-style: italic;
+  font-style: mixed (normal italic);
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
@@ -396,4 +405,11 @@
   width: 32px;
   height: 32px;
   background-color: #fff;
-}//конец с соц. сетями
+}
+.end_socials_item:hover{
+  background-color: #5D5D5D;
+}
+.end_socials_item:active{
+  background-color: #F16D7F;
+}
+//конец с соц. сетями
