--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 @import url(animation.css);
 @import url(catalog.css);
 @import url(product.css);
+@import url(cart.css);
 * {
   margin: 0;
   padding: 0;
 }
 
 .container {
-  width: 1600px;
+  max-width: 1600px;
   margin: 0 auto;
 }
 
@@ -91,7 +92,6 @@
   visibility: hidden;
   width: 232px;
   height: 764px;
-  background-color: solid white;
   position: absolute;
   top: 75px;
   margin-left: 166px;
@@ -105,10 +105,12 @@
   visibility: hidden;
   width: 232px;
   height: 764px;
-  background-color: solid white;
+  background: white;
   position: absolute;
   top: 75px;
   margin-left: 166px;
+  -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+          box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
 }
 
 .mc_main_btn {
@@ -136,7 +138,7 @@
 
 .mc_btn {
   border: none;
-  background-color: #F1E4E6;
+  background-color: #ffffff;
   color: #F16D7F;
   font-style: normal;
   font-weight: 300;
@@ -166,8 +168,8 @@
   font-size: 14px;
   line-height: 17px;
   color: #636363;
+  background-color: white;
   border: none;
-  background-color: #F1E4E6;
 }
 
 .mc_list_btn:hover {
@@ -224,15 +226,15 @@
 }
 
 .categories .categories_item .women {
-  background-image: url(image/women.jpg);
+  background-image: url(../image/women.jpg);
 }
 
 .categories .categories_item .men {
-  background-image: url(image/men.jpg);
+  background-image: url(../image/men.jpg);
 }
 
 .categories .categories_item .kids {
-  background-image: url(image/kids.jpg);
+  background-image: url(../image/kids.jpg);
 }
 
 .accesories {
@@ -254,7 +256,7 @@
   margin: 30px 0 0 0;
   background-size: cover;
   background-position: center;
-  background-image: url(image/accesories.jpg);
+  background-image: url(../image/accesories.jpg);
 }
 
 .txt {
@@ -531,8 +533,8 @@
   margin: 0 auto;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(244, 244, 244, 0.7)), to(rgba(244, 244, 244, 0.7))), url(image/fon.jpg);
-  background-image: linear-gradient(rgba(244, 244, 244, 0.7), rgba(244, 244, 244, 0.7)), url(image/fon.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(244, 244, 244, 0.7)), to(rgba(244, 244, 244, 0.7))), url(../image/fon.jpg);
+  background-image: linear-gradient(rgba(244, 244, 244, 0.7), rgba(244, 244, 244, 0.7)), url(../image/fon.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -560,7 +562,7 @@
   width: 96px;
   height: 96px;
   margin: 0 0 30px 0;
-  background-image: url(image/face.png);
+  background-image: url(../image/face.png);
   background-size: 100%;
   background-position: center;
   border-radius: 50%;
