--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,8 +2,13 @@
   margin: 0;
   padding: 0;
 }
+@import url(animation.css);
+@import url(catalog.css);
+@import url(product.css);
+@import url(cart.css);
+@import url(registration.css);
 .container{
-  width: 1600px;
+  max-width: 1600px;
   margin: 0 auto;
 }
 .menu{
@@ -69,7 +74,6 @@
   visibility: hidden;
   width: 232px;
   height: 764px;
-  background-color: solid rgb(255, 255, 255);
   position: absolute;
   top: 75px;
   margin-left: 166px;
@@ -81,10 +85,11 @@
   visibility: hidden;
   width: 232px;
   height: 764px;
-  background-color: solid rgb(255, 255, 255);
+  background: white;
   position: absolute;
   top: 75px;
   margin-left: 166px;
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
 }
 .mc_main_btn{
   margin: 37px 0 4px 33px;
@@ -106,7 +111,7 @@
 }
 .mc_btn{
   border: none;
-  background-color: #F1E4E6;
+  background-color: #ffffff;
   color: #F16D7F;
   font-style: normal;
   font-weight: 300;
@@ -132,8 +137,8 @@
   font-size: 14px;
   line-height: 17px;
   color: #636363;
+  background-color: white;
   border: none;
-  background-color: #F1E4E6;
   &:hover{
       color: #F16D7F;
   }
@@ -147,9 +152,6 @@
   display: flex;
   justify-content: flex-start;
 }
-@import url(animation.css);
-@import url(catalog.css);
-@import url(product.css);
 .brand{
   max-width: 405px;
   padding-top: 290px;
@@ -172,13 +174,13 @@
       background-size: cover;
       background-position: center;
     .women{
-      background-image: url(image/women.jpg);
+      background-image: url(../image/women.jpg);
     }
     .men{
-     background-image: url(image/men.jpg);
+     background-image: url(../image/men.jpg);
     }
     .kids{
-     background-image: url(image/kids.jpg);
+     background-image: url(../image/kids.jpg);
     } 
   }  
 }
@@ -193,7 +195,7 @@
   margin: 30px 0 0 0;
   background-size: cover;
   background-position: center;
-  background-image: url(image/accesories.jpg);
+  background-image: url(../image/accesories.jpg);
 }
 .txt{
   font-style: normal;
@@ -403,7 +405,7 @@
   margin: 0 auto;
   box-sizing: border-box;
   background-image: linear-gradient(rgba(244,244,244, 0.7), rgba(244,244,244, 0.7)), 
-                    url(image/fon.jpg);
+                    url(../image/fon.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -422,7 +424,7 @@
   width: 96px;
   height: 96px;
   margin: 0 0 30px 0;
-  background-image: url(image/face.png);
+  background-image: url(../image/face.png);
   background-size: 100%;
   background-position: center ;
   border-radius: 50%;
