--- a/scss/product.css
+++ b/scss/product.css
@@ -105,4 +105,22 @@
           justify-content: space-between;
   margin: 0 384px 48px 384px;
 }
+
+@media (max-width: 768px) {
+  .ben_sort {
+    margin: 0 197px 34px;
+  }
+}
+
+@media (max-width: 375px) {
+  .product_card {
+    min-height: 624px;
+  }
+  .product_card_photo {
+    max-width: 281px;
+  }
+  .ben_sort {
+    margin: 0 5px 64px;
+  }
+}
 /*# sourceMappingURL=product.css.map */
