--- a/scss/registration.scss
+++ b/scss/registration.scss
@@ -11,6 +11,12 @@
     display: flex;
     flex-direction: column;
 }
+.radio{
+    margin: 31px 0 33px 0;
+}
+.reg_txt{
+    margin: 15px 0 39px 0;
+}
 .rf_btn{
     width: 100%;
     max-width: 167px;
@@ -41,4 +47,18 @@
 }
 .rf_list{
     list-style: inside url(../image/V.png);
+}
+@media (max-width: 768px){
+    .loyalty{   
+         max-width: 354px;
+        font-size: 16px;}
+}
+@media (max-width:375px){
+    .main_registration{
+        flex-direction: column;
+        align-items: center;
+    }
+    .reg_form{
+        margin: 0 0 40px 0;
+    }
 }
