--- a/scss/style.css
+++ b/scss/style.css
@@ -9,6 +9,7 @@
 }
 
 .container {
+  width: 100%;
   max-width: 1600px;
   margin: 0 auto;
 }
@@ -27,7 +28,7 @@
 
 .menu .menu_logo {
   max-width: 111px;
-  padding-left: 231px;
+  margin: 0 0 0 231px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -38,7 +39,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-right: 231px;
+  margin: 0 231px 0 0;
 }
 
 .mm_form {
@@ -181,6 +182,16 @@
   color: white;
 }
 
+.mm_lc {
+  max-height: 29px;
+  max-width: 29px;
+}
+
+.mm_bb {
+  max-height: 29px;
+  max-width: 32px;
+}
+
 .main_top {
   background: #F1E4E6;
   display: -webkit-box;
@@ -191,10 +202,14 @@
           justify-content: flex-start;
 }
 
+.top_image {
+  max-width: 800px;
+}
+
 .brand {
   max-width: 405px;
-  padding-top: 290px;
-  padding-left: 63px;
+  margin-top: 290px;
+  margin-left: 58px;
   -webkit-animation: anim 1 2s;
           animation: anim 1 2s;
 }
@@ -220,7 +235,8 @@
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  width: 360px;
+  width: 100%;
+  max-width: 360px;
   min-height: 260px;
   background-size: cover;
   background-position: center;
@@ -324,8 +340,9 @@
 }
 
 .products_item {
+  width: 100%;
   display: block;
-  width: 360px;
+  max-width: 360px;
   margin: 0 30px 30px 0;
   position: relative;
   background: #F8F8F8;
@@ -489,7 +506,8 @@
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 300px;
+  max-width: 300px;
+  width: 100%;
   margin: 0 90px 0 0;
 }
 
@@ -555,7 +573,8 @@
           align-items: flex-start;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 360px;
+  max-width: 360px;
+  width: 100%;
 }
 
 .subscribe_info_face {
@@ -580,7 +599,8 @@
 }
 
 .subscribe_form {
-  width: 355px;
+  width: 100%;
+  max-width: 355px;
 }
 
 .subscribe_form_title,
@@ -617,7 +637,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 356px;
+  max-width: 356px;
+  width: 100%;
 }
 
 .subscribe_form_email {
@@ -724,5 +745,148 @@
 
 .end_socials_item:active {
   background-color: #F16D7F;
+}
+
+@media (max-width: 768px) {
+  section.menu.menu_logo {
+    margin: 0 0 0 32px;
+  }
+  section.menu.menu_main {
+    margin: 0 32px 0 0;
+  }
+  #main_menu {
+    margin: 0;
+    width: 200px;
+  }
+  .menu_content {
+    margin: 0;
+    width: 200px;
+  }
+  .top_image {
+    max-width: 386px;
+  }
+  .brand {
+    max-width: 311px;
+    margin: 138px 0 0 39px;
+    -webkit-animation: none;
+            animation: none;
+  }
+  .brand_img {
+    max-width: 311px;
+  }
+  .categories {
+    max-width: 736px;
+    margin-bottom: 154px;
+  }
+  .categories .categories_item {
+    max-width: 232px;
+    min-height: 167px;
+  }
+  .accesories {
+    min-height: 168px;
+  }
+  .products_item:nth-child(n-1) {
+    margin: 0px 7px 18px 8px;
+  }
+  .products_btn {
+    margin: 14px 0 64px 0;
+  }
+  .features {
+    margin: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 0 64px 0;
+  }
+  .features_item {
+    margin: 48px 0 0 0;
+  }
+  .subscribe {
+    background-position: 25%;
+  }
+  .subscribe_info {
+    margin: 28px 0 48px 0;
+  }
+  .subscribe_form {
+    margin: 0 0 140px 0;
+  }
+  .end {
+    padding: 0 32px;
+  }
+}
+
+@media (max-width: 500px) {
+  .mm_lc {
+    display: none;
+    z-index: 2;
+  }
+  .mm_bb {
+    display: none;
+    z-index: 2;
+  }
+  section.menu.menu_main {
+    max-width: 32px;
+    margin: 0 26px 0 0;
+  }
+  #main_menu {
+    right: 0px;
+  }
+  .menu_content {
+    right: 0px;
+  }
+  .top_image {
+    display: none;
+    z-index: 3;
+  }
+  .main_top {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    min-height: 363px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .brand {
+    max-width: 375px;
+    max-height: 63px;
+    margin: 0;
+  }
+  .brand_img {
+    max-width: 263px;
+  }
+  .categories {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 64px;
+  }
+  .categories .categories_item {
+    max-width: 343px;
+    min-height: 247px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 0 0 32px 0;
+  }
+  .accesories {
+    max-width: 343px;
+    min-height: 111px;
+    margin: 0;
+  }
+  .end {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    min-height: 143px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
 }
 /*# sourceMappingURL=style.css.map */
