--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@
 @import url(cart.css);
 @import url(registration.css);
 .container{
+  width: 100%;
   max-width: 1600px;
   margin: 0 auto;
 }
@@ -19,15 +20,15 @@
     background-color: black;
     .menu_logo{
       max-width: 111px;
-      padding-left: 231px;
+      margin: 0 0 0 231px;
       align-items: center;
     }
     .menu_main{
       max-width: 168px;
       align-items: center;
-      padding-right: 231px;
+      margin: 0 231px 0 0;
   }
-    }
+}
 .mm_form {
   display: flex;
   width: 30px;
@@ -120,11 +121,11 @@
   text-transform: uppercase;
   margin: 20px 0 0 33px;
   &:hover{
-    color: #636363;
-}
-&:active{
-    color: white;
-}
+  color: #636363;
+  }
+  &:active{
+  color: white;
+  }
 }
 .mc_list{
   list-style: none;
@@ -146,16 +147,27 @@
       color: white;
   }
 }
+.mm_lc{
+  max-height: 29px;
+  max-width: 29px;
+}
+.mm_bb{
+  max-height: 29px;
+  max-width: 32px;
+}
 //чёрное с ссылками
 .main_top{
   background: #F1E4E6;
   display: flex;
   justify-content: flex-start;
 }
+.top_image{
+  max-width: 800px;
+}
 .brand{
   max-width: 405px;
-  padding-top: 290px;
-  padding-left: 63px;
+  margin-top: 290px;
+  margin-left: 58px;
   animation: anim 1 2s;
 }//картинка с девизом
 .categories{
@@ -169,7 +181,8 @@
       margin: 0 0 0 0;
       align-items: center;
       align-content: center;
-      width: 360px;
+      width: 100%;
+      max-width: 360px;
       min-height: 260px;
       background-size: cover;
       background-position: center;
@@ -247,8 +260,9 @@
   color: #9F9F9F;
 }
 .products_item{   
+    width: 100%;
     display: block;
-    width: 360px;
+    max-width: 360px;
     margin: 0 30px 30px 0;
     position: relative;
     background: #F8F8F8;
@@ -370,7 +384,8 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  width: 300px;
+  max-width: 300px;
+  width: 100%;
   margin: 0 90px 0 0;
 }
 .features_item_title {
@@ -417,7 +432,8 @@
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-  width: 360px;
+  max-width: 360px;
+  width: 100%;
 }
 .subscribe_info_face {
   display: block;
@@ -439,7 +455,8 @@
   color: #222224;
 }
 .subscribe_form {
-  width: 355px;
+  width: 100%;
+  max-width: 355px;
 }
 .subscribe_form_title, 
 .subscribe_form_subtitle {
@@ -466,7 +483,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 356px;
+  max-width: 356px;
+  width: 100%;
 }
 .subscribe_form_email {
   display: flex;
@@ -538,3 +556,126 @@
   background-color: #F16D7F;
 }
 //конец с соц. сетями
+@media (max-width: 768px) {
+
+section.menu.menu_logo {
+  margin: 0 0 0 32px;
+}
+section.menu.menu_main {
+  margin: 0 32px 0 0;
+}
+#main_menu{
+  margin: 0;
+  width: 200px;
+}
+.menu_content{
+  margin: 0;
+  width: 200px;
+}
+.top_image {
+  max-width: 386px;
+}
+.brand{
+  max-width: 311px;
+  margin: 138px 0 0 39px;
+  animation: none;
+}
+.brand_img{
+  max-width: 311px;
+}
+.categories{
+  max-width: 736px;
+  margin-bottom: 154px;
+  .categories_item{
+    max-width: 232px;
+    min-height: 167px;
+  }
+}
+.accesories{
+  min-height: 168px;
+}
+.products_item:nth-child(n-1) {
+  margin: 0px 7px 18px 8px;
+}
+.products_btn {
+  margin: 14px 0 64px 0;
+}
+.features{
+  margin: 0;
+  flex-direction: column;
+  padding: 0 0 64px 0;
+}
+.features_item{
+  margin: 48px 0 0 0;
+}
+.subscribe{
+  background-position: 25%;
+}
+.subscribe_info{
+  margin: 28px 0 48px 0;
+}
+.subscribe_form{
+  margin: 0 0 140px 0;
+}
+.end{
+  padding: 0 32px;
+}
+}
+@media (max-width: 500px) {
+  .mm_lc{
+    display: none;
+    z-index: 2;
+  }
+  .mm_bb{
+    display: none;
+    z-index: 2;
+  }
+  section.menu.menu_main{
+    max-width: 32px;
+    margin: 0 26px 0 0;
+  }
+  #main_menu{
+    right: 0px;
+  }
+  .menu_content{
+    right: 0px;
+  }
+  .top_image{
+    display: none;
+    z-index: 3;
+  }
+  .main_top{
+    justify-content: center;
+    min-height: 363px;
+    align-items: center;
+  }
+  .brand{
+    max-width: 375px;
+    max-height: 63px;
+    margin: 0;
+  }
+  .brand_img{
+    max-width: 263px;
+  }
+  .categories{
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 64px;
+    .categories_item{
+      max-width: 343px;
+      min-height: 247px;
+      justify-content: center;
+      margin: 0 0 32px 0;
+    }
+  }
+  .accesories{
+    max-width: 343px;
+    min-height: 111px;
+    margin: 0;
+  }
+  .end{
+    flex-direction: column-reverse;
+    min-height: 143px;
+    justify-content: space-around;
+  }
+}
